actually fixed scrollbars

--- a/src/App.css
+++ b/src/App.css
@@ -108,8 +108,7 @@ a[target="_blank"]::after {
 }
 
 .mapboxgl-popup-content {
-  overflow-y: scroll;
-  overflow-x: scroll;
+  overflow: scroll !important;
 }
 
 .mapboxgl-popup-close-button {
